# docs/Swagger_API.yaml
@@ -11,7 +11,7 @@ paths:
       summary: It returns the user-id description
       description: User data
       parameters:
-        - name: user-id
+        - name: user_id  (in query used id)
           in: path
           description: User identificator
           required: true
@@ -30,7 +30,7 @@ paths:
       summary: It allows the user to modify some data about hisself
       description: User data
       parameters:
-        - name: user-id
+        - name: user_id  (in query used id)
           in: path
           description: User identificator
           required: true
@@ -73,7 +73,7 @@ paths:
       summary: It returns the of the page-id page
       description: Feed
       parameters:
-        - name: page-id
+        - name: page_id
             in: query
             description: Page identificator. If speficied, only bookings relative to the page are returned.
             required: false
@@ -82,7 +82,7 @@ paths:
             schema:
               type: integer
 
-        - name: page-size
+        - name: page_size
             in: query
             description: It specifies that the returned booking are only of the number given.
             required: false
@@ -103,7 +103,7 @@ paths:
       summary: It returns some bookings, related optionally to a user. If page size is not specified, the first 10 are returned.
       description: Booking
       parameters:
-        - name: user-id
+        - name: user_id
           in: query
           description: User identificator. If the parameter is present, bookings from the specified user are returned.
           required: false
@@ -112,7 +112,7 @@ paths:
           schema:
             type: string
 
-        - name: page-id
+        - name: page_id
             in: query
             description: Page identificator. If speficied, only bookings relative to the page are returned.
             required: false
@@ -121,7 +121,7 @@ paths:
             schema:
               type: integer
 
-        - name: page-size
+        - name: page_size
             in: query
             description: It specifies that the returned booking are only of the number given.
             required: false
@@ -140,10 +140,10 @@ paths:
 
   /api/bookings/{booking-id}/:
     get:
-      summary: It returns the booking with id booking-id
+      summary: It returns the booking with id booking_id
       description: Booking
       parameters:
-        - name: booking-id
+        - name: booking_id
           in: path
           description: Booking identificator
           required: true
@@ -163,7 +163,7 @@ paths:
       summary: It allows the user to modify the booking
       description: Booking
       parameters:
-        - name: booking-id
+        - name: booking_id
           in: path
           description: Booking identificator
           required: true
@@ -182,7 +182,7 @@ paths:
       summary: It deletes a reservation
       description: Modifica-aggiunta prenotazione
       parameters:
-        - name: booking-id
+        - name: booking_id
           in: path
           description: Booking identificator
           required: true
@@ -259,7 +259,7 @@ paths:
   /api/catalog/sales/:
     get:
       parameters:
-        - name: rank-id
+        - name: rank_id
           in: query
           description: Rank to refer for the sale
           required: false
@@ -268,7 +268,7 @@ paths:
           schema:
             type: string
 
-        - name: page-id
+        - name: page_id
           in: query
           description: Page identificator. If speficied, only sales relative to the page are returned.
           required: false
@@ -277,7 +277,7 @@ paths:
           schema:
             type: integer
 
-        - name: page-size
+        - name: page_size
           in: query
           description: It specifies that the returned salews are only of the number given.
           required: false
@@ -290,7 +290,7 @@ paths:
     /api/catalog/sales/{sale-id}:
       get:
         parameters:
-          - name: sale-id
+          - name: sale_id
             in: path
             description: Id to refer for the sale
             required: false
@@ -300,7 +300,7 @@ paths:
               type: string
       put:
         parameters:
-          - name: sale-id
+          - name: sale_id
             in: path
             description: Id to refer for the sale
             required: false
@@ -312,7 +312,7 @@ paths:
   /api/catalog/services/:
     get:
       parameters:
-        - name: page-id
+        - name: page_id
           in: query
           description: Page identificator. If speficied, only sales relative to the page are returned.
           required: false
@@ -321,7 +321,7 @@ paths:
           schema:
             type: integer
 
-        - name: page-size
+        - name: page_size
           in: query
           description: It specifies that the returned salews are only of the number given.
           required: false
@@ -334,7 +334,7 @@ paths:
     /api/catalog/services/{service-id}:
       get:
         parameters:
-          - name: service-id
+          - name: service_id
             in: path
             description: Service id
             required: true
