# server/app/src/controllers/bookingsController.js
@@ -1,5 +1,27 @@
-var mongoose = require('mongoose');
-//Movie = require("../models/whatYouNeed.js")(mongoose);
+const mongoose = require('mongoose');
+User = require("../models/firstlevelcollections/userModel.js")(mongoose);
+
+const ObjectId = mongoose.Schema.Types.ObjectID
+const defaultPageSize = 10;
+const defaultPageId = 0;
+
+
+exports.read_bookings = function(req, res) {
+
+	let page_size = defaultPageSize;
+	if (isParameterPresent(req.params.page_size)) {
+		page_size = req.params.page_size;
+	}
+
+	let page_id = defaultPageId;
+	if (isParameterPresent(req.params.page_size)) {
+		page_id = req.params.page_id;
+	}
+
+	if (isParameterPresent(ObjectId(req.params.user_id))) {
+		read_bookings_from_user(res, ObjectId(req.params.user_id), page_size, page_id);
+	}
+};
 
 exports.list_bookings = function(req, res) {
 	Movie.find({}, function(err, movie) {
@@ -68,3 +90,58 @@ exports.delete_booking = function(req, res) {
 		}
   });
 };
+
+function isParameterPresent(param) {
+	return param !== undefined;
+}
+
+function read_bookings_from_user(res, user_id, max_page_size, page_id) {
+	let skip_value = page_id * max_page_size;
+	let limit_value = (page_id + 1) * max_page_size;
+	User.findById(ObjectId(user_id)
+		.sort({'bookings.date_from': 'desc'})
+		.limit(limit_value)
+		.skip(skip_value),  function(err, user){
+		if (err)
+			res.send(err);
+		else {
+			if (user == null) {
+				res.status(404).send({ // fixme better 404
+					description: 'User or bookings not found'
+				});
+			} else {
+				res.status(200);
+				res.json();
+			}
+		}
+	});
+	/*User.findById(ObjectId(id), function(err, user) {
+		if (err)
+			res.send(err);
+		else {
+			if (user == null) {
+				res.status(404).send({ // fixme better 404
+					description: 'User not found'
+				});
+			} else {
+				// responds with user
+				let skip_value = page_id * max_page_size;
+				let limit_value = (page_id + 1) * max_page_size;
+				let bookingsRequested = User.find()
+					.sort({'bookings.date_from': 'desc'})
+					.limit(limit_value)
+					.skip(skip_value)
+					.exec() // Return the promise
+					.values // Return all the values
+					.then(function (bookings) {
+						res.status(200);
+						res.json(bookingsRequested);
+					});
+
+
+				res.status(200);
+				res.json(bookingsRequested);
+			}
+		}
+	});*/
+}
